fixed about dark mode card and iterated light saber animation

--- a/src/components/Header/Lightsaber.module.scss
+++ b/src/components/Header/Lightsaber.module.scss
@@ -1,7 +1,7 @@
 .lightsaber:hover {
   animation: shake;
   animation-duration: .35s;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease-out;
 }
 
 @keyframes shake {
@@ -9,10 +9,10 @@
     transform: none;
   }
   50% {
-    transform: rotate(12deg)
+    transform: rotate(15deg)
   }
 
   100% {
-    transform: rotate(-12deg)
+    transform: rotate(0deg)
   }
 }
