--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,14 @@ p {
   background-color: #1E1E1E;
 }
 
+.lightContactCard {
+  background-color: #F6F7FA;
+}
+
+.darkContactCard {
+  background-color: #1E1E1E;
+}
+
 .darkList {
   a:after {
     background: white;
